form,html $ scss

--- a/forms/form.html
+++ b/forms/form.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="step">
                     <p>
-                        Service
+                        work
                     </p>
                     <div class="bullet">
                         <span>3</span>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="field">
                             <div class="label">
-                                First name*
+                                name*
                             </div>
                             <input tabindex="1" type="text" min="2" name="name" placeholder="name & surname" required>
                         </div>
@@ -111,7 +111,8 @@
                             <div class="label">
                                 Title
                             </div>
-                            <select tabindex="2" required>
+                            <select tabindex="2">
+                                <option disabled="disabled" selected="selected">Title</option>
                                 <option>Mr.</option>
                                 <option>Mrs.</option>
                                 <option>Miss.</option>
@@ -135,9 +136,9 @@
                         </div>
                         <div class="field">
                             <div class="label">
-                                Phone Number
+                                Phone Number (optional)
                             </div>
-                            <input tabindex="4" type="tel" name="phone-number" min="9" placeholder="phone number" required>
+                            <input tabindex="4" type="tel" name="phone-number" min="9" placeholder="phone number">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
@@ -146,15 +147,16 @@
                     </div>
                     <div class="page" >
                         <div class="title">
-                            <h3>Services</h3>
-                            <p>*currently available for employment</p>
+                            <h3>Services / Work:</h3>
+                            <p>I'm available for a entry level/Junior web development role.</p>
+                            <p>Also open to network and work as part of a startup or freelance team.</p>
                         </div>
                         <div class="field">
                             <select tabindex="5">
-                                <option selected="selected" disabled="disabled">Service</option>
-                                <option>One Page Website</option>
-                                <option>Responsive Webpage</option>
-                                <option>Other</option>
+                                <option selected="selected" disabled="disabled">Service / Job Title</option>
+                                <option>Front Web Developer</option>
+                                <option>Junior Web Developer</option>
+                                <option>Freelance</option>
                             </select>
                             </div>
                         <div class="field btns">
@@ -164,7 +166,7 @@
                     </div>
                     <div class="page" id="message-page">
                         <div class="title">
-                            Messsage
+                            Message
                         </div>
                         <div class="field">
                             <div class="label">
