--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
       <div class="skills-top">
         <p>
           I'm a self taught Front End Developer with a keen interest in Responsive Web Design and User Interface.<br>
-          My skill set is built up from various online platforms, most notably Free-Code-Camp where I obtained a
-          certificate in Responsive Web Design.
+          I obtained a certificate in Responsive Web Design from Free-Code-Camp.
           <br><br>View my full skill set in the dropdown section below.
         </p>
       </div>
