form submit email

--- a/forms/form.html
+++ b/forms/form.html
@@ -185,7 +185,7 @@
                     <!-- form options -->
                     <input type="hidden" name="_subject" value="New submission!">
                     <input type="hidden" name="_autoresponse" value="your form has been recieved.">
-                    <input type="hidden" name="_next" value="https://shakexsempe.github.io/Portfolio-Webpage/">
+                    <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/">
                     <input type="hidden" name="_template" value="table">
                 </form>
             </div>
