index nav forms icon and title

--- a/forms/form.html
+++ b/forms/form.html
@@ -21,7 +21,7 @@
         <div class="header container">
             <nav id="navbar" class="form-nav">
                 <div class="brand">
-                    <a href="#footer" class="scroll-link">
+                    <a href="../index.html" class="scroll-link">
                         <h1><span>S</span>hakex <span>S</span>empe</h1>
                     </a>
                 </div>
