--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <li><a href="#about" data-after="About" class="scroll-link scroll-li"><i class="fas fa-user-circle"></i>about</a></li>
               <li><a href="#contact" data-after="Contact" class="scroll-link scroll-li"><i class="fas fa-at"></i>contact</a></li>
               <li><a href="#footer" data-after="Socials" class="scroll-link scroll-li"><i class="fas fa-user-friends"></i>socials</a></li>
-              <li><a href="forms/form.html" target="_blank" data-after="forms" class="scroll-li"><i class="fas fa-user-friends"></i>forms</a></li>
+              <li><a href="forms/form.html" target="_blank" data-after="forms" class="scroll-li"><i class="fas fa-address-book"></i>get In touch</a></li>
             </ul>
           </div>
         </div>
