form submit name attributes

--- a/forms/form.html
+++ b/forms/form.html
@@ -105,13 +105,13 @@
                             <div class="label">
                                 name*
                             </div>
-                            <input tabindex="1" type="text" min="2" name="name" placeholder="name & surname" required>
+                            <input tabindex="1" type="text" min="2" name="Name" placeholder="name & surname" required>
                         </div>
                         <div class="field">
                             <div class="label">
                                 Title
                             </div>
-                            <select tabindex="2">
+                            <select tabindex="2" name="Title">
                                 <option disabled="disabled" selected="selected">Title</option>
                                 <option>Mr.</option>
                                 <option>Mrs.</option>
@@ -132,13 +132,13 @@
                             <div class="label">
                                 Email Address*
                             </div>
-                            <input tabindex="3" type="email" name="email" required placeholder="eg. youremail@email.com">
+                            <input tabindex="3" type="email" name="Email" required placeholder="eg. youremail@email.com">
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number (optional)
                             </div>
-                            <input tabindex="4" type="tel" name="phone-number" min="9" placeholder="phone number">
+                            <input tabindex="4" type="tel" name="Phone Number" min="9" placeholder="phone number">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
@@ -152,7 +152,7 @@
                             <p>Also open to network and work as part of a startup or freelance team.</p>
                         </div>
                         <div class="field">
-                            <select tabindex="5">
+                            <select tabindex="5" name="work">
                                 <option selected="selected" disabled="disabled">Service / Job Title</option>
                                 <option>Front Web Developer</option>
                                 <option>Junior Web Developer</option>
@@ -172,7 +172,7 @@
                             <div class="label">
                             Leave a message or request CV 
                             </div>
-                            <textarea tabindex="6" name="textarea" id="textarea" cols="30" rows="10" placeholder="request CV">
+                            <textarea tabindex="6" name="Message" id="textarea" cols="30" rows="10" placeholder="request CV">
                                
                             </textarea>
                         </div>
