--- a/forms/form.html
+++ b/forms/form.html
@@ -185,7 +185,7 @@
                     <!-- form options -->
                     <input type="hidden" name="_subject" value="New submission!">
                     <input type="hidden" name="_autoresponse" value="your form has been received.">
-                    <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/">
+                    <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/thanks.html">
                     <input type="hidden" name="_template" value="table">
                 </form>
             </div>
