email name = email

--- a/forms/form.html
+++ b/forms/form.html
@@ -132,7 +132,7 @@
                             <div class="label">
                                 Email Address*
                             </div>
-                            <input tabindex="3" type="email" name="Email" required placeholder="eg. youremail@email.com">
+                            <input tabindex="3" type="email" name="email" required placeholder="eg. youremail@email.com">
                         </div>
                         <div class="field">
                             <div class="label">
