form font sizes

--- a/forms/form.html
+++ b/forms/form.html
@@ -17,7 +17,7 @@
 
 <body>
     <!--Header-->
-    <header id="header">
+    <header id="header" class="form-header"> 
         <div class="header container">
             <nav id="navbar" class="form-nav">
                 <div class="brand">
@@ -181,7 +181,6 @@
                             <button type="submit" class="submit">Submit</button>
                         </div>
                     </div>
-
                     <!-- form options -->
                     <input type="hidden" name="_subject" value="New submission!">
                     <input type="hidden" name="_autoresponse" value="your form has been received.">
