--- a/forms/form.html
+++ b/forms/form.html
@@ -99,7 +99,7 @@
                 <form action="https://formsubmit.co/bshakex@gmail.com" method="POST">
                     <div class="page slide-page">
                         <div class="title">
-                            Basic Info:
+                           <h3>Basic Info</h3>
                         </div>
                         <div class="field">
                             <div class="label">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="page">
                         <div class="title">
-                            Contact Info:
+                            <h3>Contact Info</h3>
                         </div>
                         <div class="field">
                             <div class="label">
@@ -147,7 +147,7 @@
                     </div>
                     <div class="page" >
                         <div class="title">
-                            <h3>Services / Work:</h3>
+                            <h3>Services / Work</h3>
                             <p>I'm available for a entry level/Junior web development role.</p>
                             <p>Also open to network and work as part of a startup or freelance team.</p>
                         </div>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="page" id="message-page">
                         <div class="title">
-                            Message
+                            <h3>Message</h3>
                         </div>
                         <div class="field">
                             <div class="label">
@@ -191,7 +191,51 @@
         </div>
     </section>
     <!-- End of Hero Section-->
+<!--Footer-->
+<footer id="footer" class="form-footer">
+    <div class="footer container">
+      <div class="brand">
+        <h1><span>S</span>hakex <span>S</span>empe</h1>
+        <!-- <h1> shakex sempe</h1> -->
+        <h2>Thanks for visiting! </h2>
+      </div>
 
+      <section class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229675.12502143384!2d25.66245999999999!3d-25.913090900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ea2b4d46c9c331d%3A0xfa60fcd66dc15cae!2sMahikeng!5e0!3m2!1sen!2sza!4v1628414165194!5m2!1sen!2sza"   allowfullscreen="" loading="lazy"></iframe>
+      </section>
+
+
+      <div class="social-icon">
+        <div class="social-item">
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </div>
+        <div class="social-item">
+          <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+        <div class="social-item">
+          <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="freeCodeCamp" target="_blank">
+            <i class="fab fa-free-code-camp"></i>
+          </a>
+        </div>
+        <div class="social-item">
+          <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </div>
+      </div>
+      <div id="bs21">
+        <p>copyright&copy; Boitumelo Sempe.</p>
+        <p><span>s</span>hakex <span>s</span>empe</p> 
+          <span id="date"></span> 
+      </div>
+    </div>
+
+  </footer>
+  <!--End of Footer-->
     
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
