form overflow: hidden

--- a/forms/form.html
+++ b/forms/form.html
@@ -194,44 +194,46 @@
 <!--Footer-->
 <footer id="footer" class="form-footer">
     <div class="footer container">
-      
-
-      <section class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229675.12502143384!2d25.66245999999999!3d-25.913090900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ea2b4d46c9c331d%3A0xfa60fcd66dc15cae!2sMahikeng!5e0!3m2!1sen!2sza!4v1628414165194!5m2!1sen!2sza"   allowfullscreen="" loading="lazy"></iframe>
-      </section>
 
 
-      <div class="social-icon">
-        <div class="social-item">
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
+        <section class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229675.12502143384!2d25.66245999999999!3d-25.913090900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ea2b4d46c9c331d%3A0xfa60fcd66dc15cae!2sMahikeng!5e0!3m2!1sen!2sza!4v1628414165194!5m2!1sen!2sza"
+                allowfullscreen="" loading="lazy"></iframe>
+        </section>
+
+
+        <div class="social-icon">
+            <div class="social-item">
+                <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </div>
+            <div class="social-item">
+                <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+            <div class="social-item">
+                <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="freeCodeCamp" target="_blank">
+                    <i class="fab fa-free-code-camp"></i>
+                </a>
+            </div>
+            <div class="social-item">
+                <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </div>
         </div>
-        <div class="social-item">
-          <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
+        <div id="bs21">
+            <p>copyright&copy; Boitumelo Sempe.</p>
+            <p><span>s</span>hakex <span>s</span>empe</p>
+            <span id="date"></span>
         </div>
-        <div class="social-item">
-          <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="freeCodeCamp" target="_blank">
-            <i class="fab fa-free-code-camp"></i>
-          </a>
-        </div>
-        <div class="social-item">
-          <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </div>
-      </div>
-      <div id="bs21">
-        <p>copyright&copy; Boitumelo Sempe.</p>
-        <p><span>s</span>hakex <span>s</span>empe</p> 
-          <span id="date"></span> 
-      </div>
     </div>
 
-  </footer>
-  <!--End of Footer-->
+</footer>
+<!--End of Footer-->
     
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
