--- a/forms/form.html
+++ b/forms/form.html
@@ -172,9 +172,8 @@
                             <div class="label">
                             Leave a message or request CV 
                             </div>
-                            <textarea tabindex="6" name="Message" id="textarea" cols="30" rows="10" placeholder="request CV">
+                            <textarea tabindex="6" name="Message" id="textarea" cols="30" rows="10" placeholder="request CV"></textarea>
                                
-                            </textarea>
                         </div>
                         <div class="field btns">
                             <button class="prev-3 prev">Previous</button>
