--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <a href="#about" type="button" class="scroll-link" id="cta-header" class="scroll-link">
+        <button href="#about" type="button" class="scroll-link" id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
           <span style="--i:4;">k</span>
           <span style="--i:5;">e</span>
           <span style="--i:6;">x</span>
-        </a>
+        </button>
       </div>
     </div>
   </section>
