--- a/forms/form.html
+++ b/forms/form.html
@@ -148,10 +148,12 @@
                     <div class="page" >
                         <div class="title">
                             <h3>Services / Work</h3>
+                        </div>
+                        <div class="service-info">
                             <p>I'm available for a entry level/Junior web development role.</p>
                             <p>Also open to network and work as part of a startup or freelance team.</p>
                         </div>
-                        <div class="field">
+                            <div class="field">
                             <select tabindex="5" name="work">
                                 <option selected="selected" disabled="disabled">Service / Job Title</option>
                                 <option>Front Web Developer</option>
