request cv links

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       </div>
       <div class="about-title">
         <h2>Front End Web Developer</h2>
-        <a id="cv-download" href="cv/bSempeCV2021.pdf" target="_blank">download resume</a>
+        <a id="cv-download" href="./forms/form.html" target="_blank">request cv</a>
       </div>
         <article id="content-1" class="custom-scrollbar-js">
         <p>Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
@@ -339,7 +339,7 @@
         <a href="https://codepen.io/bSempe" target="_blank" class="fcc-link">
           <i class="fab fa-codepen" aria-hidden="true"></i>CodePen
         </a>
-        <a href="cv/bSempeCV2021.pdf" target="_blank" class="fcc-link">
+        <a href="./forms/form.html" target="_blank" class="fcc-link">
           <i class="fas fa-user-graduate"></i>cv
         </a>
         <a href="https://github.com/ShakexSempe" target="_blank" id="profile-link">
