--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
         </div>
         <div class="contact-info">
             <h2>bshakex@gmail.com</h2>
+            <a href="./forms/form.html" target="_blank">Get In Touch</a>
         </div>
       </div>
 
