contact info form link opacity before hover

--- a/forms/form.html
+++ b/forms/form.html
@@ -150,8 +150,8 @@
                             <h3>Services / Work</h3>
                         </div>
                         <div class="service-info">
-                            <p>I'm available for a entry level/Junior web development role.</p>
-                            <p>Also open to network and work as part of a startup or freelance team.</p>
+                            <p>I'm available for a Junior Web Development role.</p>
+                            <p>I'm also open to work as part of a startup or freelance team.</p>
                         </div>
                             <div class="field">
                             <select tabindex="5" name="work">
@@ -159,6 +159,7 @@
                                 <option>Front Web Developer</option>
                                 <option>Junior Web Developer</option>
                                 <option>Freelance</option>
+                                <option>Start-Up</option>
                             </select>
                             </div>
                         <div class="field btns">
