--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
             <ul class="links">
               <figure class="nav-avi">
-                <a href="#about" class="scroll-link" id="avi">
+                <a href="#about-img"  id="avi">
                   <img src="img/me.jpg" alt="avi">
                 </a>
               </figure>
@@ -299,8 +299,8 @@
 <!--About Section-->
 <section id="about">
   <div class="about container">
-    <div class="col-left">
-      <div class="about-img">
+    <div class="col-left" id="about-img">
+      <div class="about-img" >
         <!-- <img id="me" src="img/me.jpg" alt="img" /> -->
       </div>
     </div>
