buttons paddings and font sizes

--- a/forms/form.html
+++ b/forms/form.html
@@ -150,7 +150,7 @@
                             <h3>Services / Work</h3>
                         </div>
                         <div class="service-info">
-                            <p>I'm available for a Junior Web Development role.</p>
+                            <p>I'm available for: Front End / Junior Web Development role.</p>
                             <p>I'm also open to work as part of a startup or freelance team.</p>
                         </div>
                             <div class="field">
