--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       </div>
       <div id="bs21">
         <p>copyright&copy; Boitumelo Sempe.</p>
-        <p><span>s</span>hakex <span>s</span>empe</p> 
+        <p>shakex sempe</p> 
           <span id="date"></span> 
       </div>
     </div>
