--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#29323c"/>
   <title>ShakexSempe Portfolio Page</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="/css/style2.css">
+  <link rel="stylesheet" href="../css/style2.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
