--- a/thanks.html
+++ b/thanks.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#29323c" />
     <title>ShakexSempe Portfolio Page</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style2.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
@@ -38,7 +39,6 @@
                 <h3><span>S</span>hakex <span>S</span>empe</h3>                
                 <h2>Hope to work with you soon!</h2>
             </div>
-
                 <article id="thanks">
                     <h3>Thanks for completing my form.</h3>
                     <a href="index.html"><i class="fas fa-house-user"></i></a>
