--- a/thanks.html
+++ b/thanks.html
@@ -35,7 +35,7 @@
     <!--Footer-->
     <footer id="footer">
         <div class="footer container">
-            <div class="brand footer-brand thanks-footer">
+            <div class="brand thanks-brand">
                 <h3><span>S</span>hakex <span>S</span>empe</h3>                
                 <h2>Hope to work with you soon!</h2>
             </div>
