footer social icons label adjustment

--- a/thanks.html
+++ b/thanks.html
@@ -59,7 +59,7 @@
                     </a>
                 </div>
                 <div class="social-item">
-                    <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="freeCodeCamp" target="_blank">
+                    <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="FCC" target="_blank">
                         <i class="fab fa-free-code-camp"></i>
                     </a>
                 </div>
