--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       </div>
       <div class="skills-top">
         <p>
-          I'm a self taught Front End Developer with a keen interest in Responsive Web Design and User Interface.<br>
-          I obtained a certificate in Responsive Web Design from Free-Code-Camp.
+          I'm a Front End Developer with a keen interest in Responsive Web Design and User Interface.<br>
+          I have a certificate in Responsive Web Design from Free-Code-Camp.
           <br><br>View my full skill set in the dropdown section below.
         </p>
       </div>
