nav avi figcaption

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
           <div class="links-container">
               <figure class="nav-avi">
                 <a href="#about-img"  id="avi">
-                  <img src="img/me.jpg" alt="avi">
+                  <img src="img/me.jpg" alt="avi" style="width: 100%" loading="lazy">
                 </a>
               </figure>
+              <figcaption>
+                <a href="https://twitter.com/Shake_x11" target="_blank">Boitumelo sempe
+                  <span>
+                    @shake_x11 <i class="fab fa-twitter"></i></span></a>
+                    
+              </figcaption>
             <ul class="links">
               <li><a href="#skills" data-after="skills" class="scroll-link scroll-li"><i class="fas fa-lightbulb"></i>skills</a></li>
               <li><a href="#projects" data-after="Projects" class="scroll-link scroll-li"><i class="fab fa-github"></i>projects</a></li>
