skills top span

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
       </div>
       <div class="skills-top">
         <p>
-          I'm a Front End Developer with a keen interest in Responsive Web Design and User Interface.<br>
+          I'm a Front End Developer with a focus on Responsive Web Design and User Interface.<br>
           I have a certificate in Responsive Web Design from Free-Code-Camp.
-          <br><br>View my full skill set in the dropdown section below.
+          <br><br><span>View my full skill set in the dropdown section below.</span> 
         </p>
       </div>
       <!--Dropdown-->
