contact item hover effect

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
       <div class="skills-top">
         <p>
-          I'm a Front End Developer with a focus on Responsive Web Design and User Interface.<br>
+          I'm a Front End Developer with a keen interest Responsive Web Design and UX design.<br>
           I have a certificate in Responsive Web Design from Free-Code-Camp.
           <br><br><span>View my full skill set in the dropdown section below.</span> 
         </p>
