footer contact form setup

--- a/index.html
+++ b/index.html
@@ -402,13 +402,33 @@
   <!--Footer-->
   <footer id="footer">
     <div class="footer container">
-      <div class="brand">
-        <h3><span>S</span>hakex <span>S</span>empe</h3>
-        <!-- <h1> shakex sempe</h1> -->
-        <h2>Thanks for visiting! </h2>
-      </div>
+      <!-- contact form -->
+      <form class="contact-form">
+        <h1>Get In Touch</h1>
 
-      <section class="cube-container">
+        <div class="input-div">
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" required>
+        </div>
+
+        <div class="input-div">
+          <label for="email">email:</label>
+          <input type="email" name="email" id="email">
+        </div>
+
+        <div class="input-div">
+          <label for="message">message:</label>
+          <textarea rows="3" cols="30" name="message" id="message"></textarea>
+        </div>
+      </form>
+      <!-- end of contact form -->
+
+      <!-- <div class="brand">
+        <h3><span>S</span>hakex <span>S</span>empe</h3>
+        <h2>Thanks for visiting! </h2>
+      </div> -->
+
+      <!-- <section class="cube-container">
         <div class="scene">
           <div class="cube">
             <div class="front"></div>
@@ -418,7 +438,7 @@
             <div class="top"></div>
             <div class="bottom"></div>
           </div>
-      </section>
+      </section> -->
 
 
       <div class="social-icon">
