--- a/index.html
+++ b/index.html
@@ -408,17 +408,17 @@
 
         <div class="input-div">
           <label for="username">name:</label>
-          <input type="text" name="username" id="username" required minlength="2">
+          <input type="text" name="username" id="username" placeholder="enter your name here.." required minlength="2">
         </div>
 
         <div class="input-div">
           <label for="email">email:</label>
-          <input type="email" name="email" id="email" required>
+          <input type="email" name="email" id="email" placeholder="enter your email address here.." required>
         </div>
 
         <div class="input-div">
           <label for="message">message:</label>
-          <textarea rows="3" cols="50" name="message" id="message"></textarea>
+          <textarea rows="3" cols="50" name="message" placeholder="leave a message" id="message"></textarea>
         </div>
 
         <button type="submit">send</button>
