--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
       <section class="socialMedia-links">
         <!-- social media link -->
         <div class="socialMedia-item">
+          <i class="fas fa-link link-icon"></i>
           <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
             <i class="fab fa-twitter"></i>twitter
           </a>
@@ -453,6 +454,7 @@
         <!-- end of social media link -->
         <!-- social media link -->
         <div class="socialMedia-item">
+          <i class="fas fa-link link-icon"></i>
           <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
             <i class="fab fa-linkedin-in"></i>Linkedin
           </a>
@@ -460,6 +462,7 @@
         <!-- end of social media link -->
         <!-- social media link -->
         <div class="socialMedia-item">
+          <i class="fas fa-link link-icon"></i>
           <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
             <i class="fab fa-github"></i> github
           </a>
@@ -467,6 +470,7 @@
         <!-- end of social media link -->
         <!-- social media link -->
         <div class="socialMedia-item">
+          <i class="fas fa-link link-icon"></i>
           <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="FCC" target="_blank">
             <i class="fab fa-free-code-camp"></i>freeCodeCamp
           </a>
