test: social media icon

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
       <section class="socialMedia-links">
         <!-- social media link -->
         <div class="socialMedia-item">
-          <i class="fas fa-link link-icon"></i>
+          <i class="fab fa-twitter link-icon"></i>
           <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
             <i class="fab fa-twitter"></i>twitter
           </a>
