test: social media items styles

--- a/index.html
+++ b/index.html
@@ -453,18 +453,19 @@
         </div>
         <!-- end of social media link -->
         <!-- social media link -->
-        <div class="socialMedia-item">
-          <i class="fas fa-link link-icon"></i>
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
-            <i class="fab fa-linkedin-in"></i>Linkedin
+        <div class="socialMedia-item linkedin">
+          <!-- <i class="fas fa-link link-icon"></i> -->
+          <p class="link-icon" >linkedin</p>
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/"  data-icon="linkedin" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
         <!-- end of social media link -->
         <!-- social media link -->
-        <div class="socialMedia-item">
-          <i class="fas fa-link link-icon"></i>
+        <div class="socialMedia-item github">
+          <p class="link-icon"><i class="fab fa-github"></i>github</p>
           <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
-            <i class="fab fa-github"></i> github
+            @ShakexSempe
           </a>
         </div>
         <!-- end of social media link -->
