footer link colors

--- a/index.html
+++ b/index.html
@@ -445,35 +445,35 @@
       <!-- social media links -->
       <section class="socialMedia-links">
         <!-- social media link -->
-        <div class="socialMedia-item">
-          <i class="fab fa-twitter link-icon"></i>
+        <div class="socialMedia-item twitter">
+          <p class="link-icon">twitter</p>
           <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
-            <i class="fab fa-twitter"></i>twitter
+            <i class="fab fa-twitter"></i>@shake_x11
           </a>
         </div>
         <!-- end of social media link -->
         <!-- social media link -->
         <div class="socialMedia-item linkedin">
           <!-- <i class="fas fa-link link-icon"></i> -->
-          <p class="link-icon" >linkedin</p>
+          <p class="link-icon">linkedin</p>
           <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/"  data-icon="linkedin" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in"></i>boitumelo Sempe
           </a>
         </div>
         <!-- end of social media link -->
         <!-- social media link -->
         <div class="socialMedia-item github">
-          <p class="link-icon"><i class="fab fa-github"></i>github</p>
+          <p class="link-icon">github</p>
           <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
-            @ShakexSempe
+            <i class="fab fa-github"></i>ShakexSempe
           </a>
         </div>
         <!-- end of social media link -->
         <!-- social media link -->
-        <div class="socialMedia-item">
-          <i class="fas fa-link link-icon"></i>
+        <div class="socialMedia-item fcc">
+          <p class="link-icon">freeCodecamp</p>
           <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="FCC" target="_blank">
-            <i class="fab fa-free-code-camp"></i>freeCodeCamp
+            <i class="fab fa-free-code-camp"></i>boitumelo sempe
           </a>
         </div>
         <!-- end of social media link -->
