about img and thank you page

--- a/thanks.html
+++ b/thanks.html
@@ -34,40 +34,51 @@
     <!--Footer-->
     <footer id="footer">
         <div class="footer container">
-            <div class="brand thanks-brand">
-                <h3><span>S</span>hakex <span>S</span>empe</h3>                
-                <h2>Hope to work with you soon!</h2>
-            </div>
-                <article id="thanks">
-                    <h3>Thanks for completing my form.</h3>
-                    <a href="index.html"><i class="fas fa-house-user"></i></a>
-                </article>
-            
+            <article id="thanks">
+                <h3>Thanks for completing my form.</h3>
+                <a href="index.html"><i class="fas fa-house-user"></i></a>
+            </article>
 
-
-            <div class="social-icon">
-                <div class="social-item">
+            <!-- social media links -->
+            <section class="socialMedia-links">
+                <!-- social media link -->
+                <div class="socialMedia-item twitter">
+                    <p class="link-icon">twitter</p>
+                    <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
+                        <i class="fab fa-twitter"></i>@shake_x11
+                    </a>
+                </div>
+                <!-- end of social media link -->
+                <!-- social media link -->
+                <div class="socialMedia-item linkedin">
+                    <!-- <i class="fas fa-link link-icon"></i> -->
+                    <p class="link-icon">linkedin</p>
                     <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin"
                         target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-linkedin-in"></i>boitumelo Sempe
                     </a>
                 </div>
-                <div class="social-item">
+                <!-- end of social media link -->
+                <!-- social media link -->
+                <div class="socialMedia-item github">
+                    <p class="link-icon">github</p>
                     <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github"></i>ShakexSempe
                     </a>
                 </div>
-                <div class="social-item">
+                <!-- end of social media link -->
+                <!-- social media link -->
+                <div class="socialMedia-item fcc">
+                    <p class="link-icon">freeCodecamp</p>
                     <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="FCC" target="_blank">
-                        <i class="fab fa-free-code-camp"></i>
+                        <i class="fab fa-free-code-camp"></i>boitumelo sempe
                     </a>
                 </div>
-                <div class="social-item">
-                    <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                </div>
-            </div>
+                <!-- end of social media link -->
+            </section>
+            <!-- end of social media links -->
+
+
             <div id="bs21">
                 <p>copyright&copy; Boitumelo Sempe.</p>
                 <p><span>s</span>hakex <span>s</span>empe</p>
@@ -83,12 +94,12 @@
     </a>
     <!--end of back to top button-->
 
-<!-- date -->
+    <!-- date -->
     <script>
         let thanksDate = document.getElementById("footer-date");
         thanksDate.innerHTML = new Date().getFullYear();
     </script>
-<!-- end of date -->
+    <!-- end of date -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
     </script>
