--- a/index.html
+++ b/index.html
@@ -407,40 +407,30 @@
         <h1>Get In Touch</h1>
 
         <div class="input-div">
-          <label for="username">name:</label>
-          <input type="text" name="username" id="username" placeholder="enter your name here.." required minlength="2">
+          <label for="username">name :</label>
+          <input type="text" name="username" id="username" placeholder="name & surname.." required minlength="2">
         </div>
 
         <div class="input-div">
-          <label for="email">email:</label>
-          <input type="email" name="email" id="email" placeholder="enter your email address here.." required>
+          <label for="email">email :</label>
+          <input type="email" name="email" id="email" placeholder="your email address.." required>
         </div>
 
         <div class="input-div">
-          <label for="message">message:</label>
-          <textarea rows="3" cols="50" name="message" placeholder="leave a message" id="message"></textarea>
+          <label for="message">message :</label>
+          <textarea rows="3" cols="50" name="message" placeholder="leave a message..." id="message"></textarea>
         </div>
 
         <button type="submit">send</button>
+        <!-- form options -->
+        <input type="hidden" name="_subject" value="New submission!">
+        <input type="hidden" name="_autoresponse" value="Shakex has received your form">
+        <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/thanks.html">
+        <input type="hidden" name="_template" value="table">
+        <input type="text" name="_honey" style="display:none">
+
       </form>
       <!-- end of contact form -->
-
-      <!-- <div class="brand">
-        <h3><span>S</span>hakex <span>S</span>empe</h3>
-        <h2>Thanks for visiting! </h2>
-      </div> -->
-
-      <!-- <section class="cube-container">
-        <div class="scene">
-          <div class="cube">
-            <div class="front"></div>
-            <div class="back"></div>
-            <div class="left"></div>
-            <div class="right"></div>
-            <div class="top"></div>
-            <div class="bottom"></div>
-          </div>
-      </section> -->
 
       <!-- social media links -->
       <section class="socialMedia-links">
@@ -481,31 +471,9 @@
         
 
       </section>
-
       <!-- end of social media links -->
 
-      <!-- <div class="social-icon">
-        <div class="social-item">
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-        </div>
-        <div class="social-item">
-          <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-        <div class="social-item">
-          <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="FCC" target="_blank">
-            <i class="fab fa-free-code-camp"></i>
-          </a>
-        </div>
-        <div class="social-item">
-          <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </div>
-      </div> -->
+  
       
 
       <div id="bs21">
