--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         <h1>Get In Touch</h1>
 
         <div class="input-div">
-          <label for="username">name :</label>
+          <label for="name">name :</label>
           <input type="text" name="username" id="username" placeholder="name & surname.." required minlength="2">
         </div>
 
